--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,6 +19,16 @@ jobs:
         with:
           tinytex: true
 
+      - name: Setup miniconda
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-update-conda: true
+          miniforge-variant: Mambaforge
+          python-version: 3.9
+          activate-environment: causality
+          environment-file: environment.yml
+          use-mamba: true
+
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
