--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,9 +23,8 @@ jobs:
         uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
-          miniforge-variant: Mambaforge
           python-version: 3.9
-          activate-environment: causality
+          activate-environment: test
           environment-file: environment.yml
           use-mamba: true
 
