--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -25,6 +25,8 @@ jobs:
           auto-update-conda: true
           python-version: 3.10.4
           environment-file: environment.yml
+          channels: defaults
+          
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
