added correct environment name.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,7 +26,8 @@ jobs:
           python-version: 3.10.4
           environment-file: environment.yml
           channels: defaults
-          
+          activate-environment: CRbook
+
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
