--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
           auto-update-conda: true
           python-version: 3.10.4
           environment-file: environment.yml
-          channels: defaults
+          channels: conda-forge,defaults
           activate-environment: CRbook
 
 
