--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ on:
   workflow_dispatch:
   push:
     branches: main
-    
+
 jobs:
   example-3:
     name: Ex3 Linux
@@ -15,7 +15,7 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: anaconda-client-env
-          environment-file: etc/example-environment.yml
+          environment-file: example-environment.yml
           python-version: 3.5
       - run: |
           conda info
