--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,7 +16,10 @@ jobs:
         with:
           activate-environment: anaconda-client-env
           environment-file: example-environment.yml
-          python-version: 3.5
+          python-version: 3.9
+          mamba-version: "*"
+          channels: conda-forge,defaults
       - run: |
           conda info
           conda list
+
