--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -3,23 +3,39 @@ on:
   push:
     branches: main
 
+name: Quarto Publish
 jobs:
-  example-3:
-    name: Ex3 Linux
+  build-conda:
+    name: Conda Build with mamba
     runs-on: "ubuntu-latest"
     defaults:
       run:
         shell: bash -l {0}
     steps:
+      -name: build 
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: anaconda-client-env
           environment-file: example-environment.yml
-          python-version: 3.9
+          python-version: 3.10.4
           mamba-version: "*"
           channels: conda-forge,defaults
       - run: |
           conda info
           conda list
 
+      - name: Check out repository
+        uses: actions/checkout@v2
+
+      - name: Set up Quarto
+        uses: quarto-dev/quarto-actions/setup@v2
+        with:
+          tinytex: true
+
+      - name: Render and Publish
+        uses: quarto-dev/quarto-actions/publish@v2
+        with:
+          target: gh-pages
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
