--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,9 +13,8 @@ jobs:
         shell: bash -l {0}
 
     steps:
-      - name: build 
-        uses: actions/checkout@v2
-        uses: conda-incubator/setup-miniconda@v2
+      - uses: actions/checkout@v2
+      - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: anaconda-client-env
           environment-file: example-environment.yml
