--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,7 +3,7 @@ project:
 
 book:
   title: "QuartoBookExample"
-  author: "Jane Doe"
+  author: "Martin Barron"
   date: "9/2/2022"
   chapters:
     - index.qmd
