--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,10 +17,13 @@ jobs:
       - uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: anaconda-client-env
-          environment-file: example-environment.yml
+          #environment-file: example-environment.yml
           python-version: 3.10.4
           mamba-version: "*"
           channels: conda-forge,defaults
+          run: |
+            # $CONDA is an environment variable pointing to the root of the miniconda directory
+            $CONDA/bin/conda env update --file example-environment.yml --name base
 
       - name: Check out repository
         uses: actions/checkout@v2
