--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,8 +16,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: conda-incubator/setup-miniconda@v2
         with:
-          activate-environment: "" #anaconda-client-env
           auto-activate-base: true
+          activate-environment: ""
           #environment-file: example-environment.yml
           python-version: 3.10.4
           mamba-version: "*"
