--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,27 +13,22 @@ jobs:
         shell: bash -l {0}
 
     steps:
-      - uses: actions/checkout@v2
-      - uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-activate-base: true
-          activate-environment: true
-          #environment-file: example-environment.yml
-          python-version: 3.10.4
-          mamba-version: "*"
-          channels: conda-forge,defaults
-          run: |
-            # $CONDA is an environment variable pointing to the root of the miniconda directory
-            $CONDA/bin/conda env update --file example-environment.yml --name base
-            conda list
-
-      - name: Check out repository
+      -name: checkout
         uses: actions/checkout@v2
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
         with:
           tinytex: true
+
+      - name: setup conda
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          activate-environment: anaconda-client-env
+          environment-file: example-environment.yml
+          python-version: 3.10.4
+          mamba-version: "*"
+          channels: defaults
 
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
