--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,8 +12,7 @@ jobs:
         shell: bash -l {0}
 
     steps:
-    - name: checkout
-      uses: actions/checkout@v2
+    - uses: actions/checkout@v2
 
     - name: Set up Quarto
       uses: quarto-dev/quarto-actions/setup@v2
