--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,9 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
-    - name: Set up Quarto
-      uses: quarto-dev/quarto-actions/setup@v2
+    - uses: quarto-dev/quarto-actions/setup@v2
       with:
         tinytex: true
 
