--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,8 +28,8 @@ jobs:
           
       - name: run stuff
         run: |
-            $CONDA/bin/conda env update --file environment.yml --name base
-            conda env update --file environment.yml --name base
+            $CONDA/bin/conda env update --file example-environment.yml --name base
+            conda env update --file example-environment.yml --name base
             conda info
             conda list
             conda env list
